# survey-app

./: .codecov.yml  .env  .env.example  .git-blame-ignore-revs  .gitignore  Caddyfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  readme.md
.github/: dependabot.yml
.github/workflows/: cd-keycloak.yml  cd-monitoring.yml  cd-prod.yml  cd-staging.yml  ci-analytics.yml  ci-backend.yml  ci-backoffice.yml  ci-code-vulnerabilities.yml  ci-coverage.yml  ci-frontend.yml  ci.yml  code-vulnerabilities.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  nightly-stress.yml  release-changelog.yml  (+1 more)
analytics/: README.md  app.py  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  pom.xml
docs/: data-recovery.md  deploy-keycloak.md  monitoring-config.md  secure-deploy.md
elk/: logstash.conf
frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
infra/: .env.example  .env.patronx.example  Caddyfile  docker-compose.dev.yml  docker-compose.keycloak.yml  docker-compose.yml
makefiles/: compose.mk  dev.mk  keycloak.mk  monitoring.mk
monitoring/: prometheus.yml
scripts/: free-up.sh  restore.sh  restore_db.sh
services/analytics/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
services/analytics/src/analytics/: __init__.py  cli.py  exceptions.py  logger.py  main.py  mcp_server.py  ollama.py  sentry.py
services/analytics/src/analytics/models/: __init__.py  chat.py
services/analytics/tests/: test_app.py  test_cli.py  test_mcp_server.py  test_ollama.py
(+353 files in other folders)
