[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics"
version = "0.1.0"
description = "AI analytics microservice"
readme = "README.md"
authors = [{ name = "xdanielsb" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.11",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest", "httpx", "pytest-cov"]

[tool.pytest.ini_options]
addopts = "-vv"
