[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics"
version = "0.1.0"
description = "AI analytics microservice"
readme = "README.md"
authors = [{ name = "xdanielsb" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.11",
    "httpx>=0.27",
    "python-logstash>=0.4.8",
    "sentry-sdk>=2",
    "mcp>=1.11",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-cov",
    "ruff",
    "isort",
    "mypy",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-vv"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
analytics = "analytics.cli:cli"